# needler

./: .gitignore  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data/: procal_supplementaltable_S1.csv  uniprot_pkinfam_202004.csv
src/: build_needle_jobs_makefile.py  digest_proteins.py  extract_proteins.py  extract_tissue_accessions.py  filter_accessions.py  needler.py  predict_rt.py
