[tool.poetry]
name = "needler"
version = "0.1.0"
description = ""
authors = ["Damien Ready <damien.ready@abbvie.com>"]

[tool.poetry.dependencies]
openpyxl = "^3.0.9"
pandas = "^1.3.4"
pyteomics = "^4.5"
python = "^3.8,<3.11"
scipy = "^1.7.3"
tqdm = "^4.62.3"
z3-solver = "^4.8.13"

[tool.poetry.dev-dependencies]
jupyterlab = "^3.2.5"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
